ui: adjust NativeThemeDarkAura prominent button color

kGoogleBlue300 is too light on a dark background - it makes the button look
disabled. kGoogleBlue600 seems to be the best fit from the existing palette.

Bug: 855579
Change-Id: I0b918b45e93bce127d484d3324af3ef46528ac70
Reviewed-on: https://chromium-review.googlesource.com/1127924
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573061}
Former-commit-id: 5245a2a060f4e6b0ce1e2913de8da57b392f8263